--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,9 @@ body {
 
 body {
   background-color: #0D0D11;
-  color: #9C9C9C;
+  color: #9c9c9c;
   line-height: 1;
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: 1rem;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
@@ -37,7 +37,7 @@ body {
 input,
 button,
 textarea {
-  font-family: "Poppins";
+  font-family: "Poppins", sans-serif;
   font-size: inherit;
   line-height: inherit;
 }
@@ -143,7 +143,7 @@ h6 {
   text-align: center;
   display: inline-block;
   padding: 1rem 1.875rem;
-  background-color: #3D96F4;
+  background-color: #3d96f4;
   border-radius: 3.125rem;
   color: #fff;
   letter-spacing: 0.125rem;
@@ -351,7 +351,7 @@ h6 {
 }
 
 .footer .main-footer__lable {
-  color: #FFF;
+  color: #fff;
   font-size: 1.25rem;
   font-weight: 500;
   line-height: 1.2;
@@ -398,7 +398,7 @@ h6 {
 }
 
 .footer .menu-footer__link:hover {
-  color: #FFF;
+  color: #fff;
 }
 
 .footer .subscribe {
@@ -409,12 +409,14 @@ h6 {
 }
 
 .footer .subscribe__input {
+  font-family: "Poppins", sans-serif;
   width: 100%;
   height: 2.6875rem;
   border-radius: 50px;
   border: 1px solid rgba(129, 129, 139, 0.3);
   padding-left: 2.0625rem;
   background-color: transparent;
+  color: #fff;
 }
 
 .footer .subscribe__input::-webkit-input-placeholder {
